
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_len; int sin_addr; int sin_family; } ;
struct in_addr {int dummy; } ;
struct hostent {int * h_addr_list; } ;


 int AF_INET ;
 int bzero (struct sockaddr_in*,int) ;
 struct hostent* gethostbyname2 (char*,int ) ;
 int inet_aton (char*,int *) ;
 int memcpy (int *,int ,int) ;

int res(char* host,struct sockaddr_in * ps)
{
 struct hostent *he;
 bzero(ps,sizeof(struct sockaddr_in));
 ps->sin_family=AF_INET;
 ps->sin_len=sizeof(struct sockaddr_in);
 if(!inet_aton(host,&ps->sin_addr))
 {
  he=gethostbyname2(host,AF_INET);
  if(!he) return 0;
  memcpy(&ps->sin_addr,he->h_addr_list[0],sizeof(struct in_addr));
 }
 return 1;
}
